# finoracle

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css  tailwind.css
src/: main.rs
src/components/: chart_view.rs  list_view.rs  mod.rs  stock_list.rs  stock_view.rs
