[package]
name = "finoracle"
version = "0.1.0"
authors = ["Dale Hutchinson <daletristanhutchinson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack", "web"] }
# dioxus-desktop = "0.6.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Element",
    "Document",
] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
